test/arrays/sungeun/invalid_reindex2.good
invalid_reindex2.chpl:15: error: halt reached - extent in dimension 2 does not match actual
